# indicator

./: .env.example  .gitignore  ARCHITECTURE_OPTIMIZATION.md  IMPLEMENTATION_STATUS.md  OPTIMIZATION_SUMMARY.md  PROMPT.md  QUICK_START.md  README.md  TOAST_EXAMPLES.md  TOAST_USAGE.md  TRADING_AUTOMATION.md  check_status.bat  cookies.txt  prompt.txt  pyproject.toml  render.yaml  requirements.txt  run.py  run_server.bat  run_server_production.bat  setup_environment.bat  start.py
.claude/: settings.local.json
app/: __init__.py  main.py
app/api/: __init__.py  admin.py  auth.py  auto_trade.py  consolidated.py  email.py  htmx.py  market.py  paper_trading.py  settings.py  signals.py  user_auth.py  user_dashboard.py
app/core/: __init__.py  config.py  logging.py  security.py  toast.py
app/indicators/: __init__.py  greeks.py  momentum.py  options.py  pivots.py  trend.py  volatility.py  volume.py
app/middleware/: __init__.py  api_tracking.py
app/models/: paper_trading.py  signal_history.py  user_trading.py
app/services/: __init__.py  ai_trader.py  ai_trading_service.py  auto_trader.py  cache_manager.py  cached_data_fetcher.py  data_fetcher.py  email_service.py  live_trading_service.py  order_manager.py  paper_trading.py  paper_trading_service.py  paper_trading_strategies.py  risk_manager.py  signal_engine.py  signal_history_service.py  signal_quality.py  trading_automation.py  user_auth.py  websocket_manager.py  zerodha_auth.py
app/templates/: auto_trade.html  base.html  dashboard.html  dashboard_optimized.html  history.html  (+16 more)
migrations/: add_strategy_column.sql
(+52 files in other folders)
